# learning-programming-languages

./: .gitignore  README.md  flake.nix
docs/: functional-programming-2026-learning-items.md  functional-programming-resources.md
languages/c/: .gitignore  README.md
languages/c/docs/: 2026-learning-items.md  learning-resources.md
languages/c/hashtable/: Makefile  README.md
languages/c/hashtable/src/: hashtable.c  hashtable.h  main.c
languages/c/hashtable/tests/: test_hashtable.c
languages/cobol/: README.md  build.sh  expected_output.txt  run.sh  test.sh
languages/cobol/data/: err.txt  gen_expected.py
languages/cobol/src/: payroll.cob
languages/haskell/: .gitignore  README.md  learning-haskell.cabal  mise.toml
languages/haskell/app/: Main.hs  README.md
languages/haskell/docs/: 2026-learning-items.md  learning-resources.md
languages/haskell/src/: Calc.hs
languages/haskell/test/: Spec.hs
languages/lisp/: .gitignore  README.md  shapes.asd
languages/lisp/docs/: 2026-learning-items.md  learning-resources.md
languages/lisp/src/: conditions.lisp  load.lisp  macros.lisp  main.lisp  packages.lisp  scene.lisp  shapes.lisp
languages/lisp/test/: suite.lisp  test.lisp
languages/ml/: .gitignore  README.md
languages/ml/src/: demo.py  test_ml.py
languages/ml/src/ml_scratch/: __init__.py  datasets.py  kmeans.py  linalg.py  linear_regression.py  logistic_regression.py  metrics.py  mlp.py
languages/rust/: .gitignore  Cargo.toml  README.md
languages/rust/docs/: 2026-learning-items.md  learning-resources.md
languages/rust/src/: command.rs  error.rs  lib.rs  main.rs  store.rs  value.rs
languages/rust/tests/: cli.rs
languages/web3/: README.md
languages/web3/blockchain/: README.md  __init__.py  block.py  chain.py  crypto.py  demo.py  test_chain.py  transaction.py
languages/zig/: .gitignore  README.md  build.zig
languages/zig/data/: sample.txt
languages/zig/docs/: 2026-learning-items.md  learning-resources.md
languages/zig/src/: dyn_array.zig  freq.zig  main.zig  ring_buffer.zig
topics/functional-programming-basics/: README.md  result.mjs  result.test.mjs
topics/pdf-toolkit/: README.md
topics/pdf-toolkit/pdftoolkit/: __init__.py  annotations.py  app.py  builder.py  cli.py  document.py  filters.py  images.py  model.py  ops.py  parser.py  storage.py
topics/pdf-toolkit/tests/: fixtures.py  test_pdftoolkit.py
