cabal-version:      2.4
name:               learning-haskell
version:            0.1.0.0
synopsis:           A thorough GHC hands-on: arithmetic parser + evaluator (base only).
description:
  A small, idiomatic Haskell program that exercises the language's signature
  features: algebraic data types, pattern matching, a user-defined typeclass,
  Maybe/Either error handling (no partial functions for expected errors),
  recursion and higher-order functions, and a hand-written
  Functor/Applicative/Monad parser-combinator type -- all on base only.
  .
  The PRIMARY verified workflow for this repo uses `runghc` so that nothing has
  to be downloaded (the machine is offline). This .cabal file is provided as the
  UPGRADE PATH: once you have a package set, `cabal build` / `cabal test` give
  you incremental compilation and a normal project layout. See README.md.
homepage:           https://www.haskell.org
license:            MIT
author:             learning-haskell
maintainer:         hirosugi41@gmail.com
category:           Education
build-type:         Simple
tested-with:        GHC ==8.10.7
extra-source-files: README.md

common warnings
  ghc-options: -Wall

library
  import:           warnings
  hs-source-dirs:   src
  exposed-modules:  Calc
  build-depends:    base >=4.14 && <5
  default-language: Haskell2010

executable calc
  import:           warnings
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:    base, learning-haskell
  default-language: Haskell2010

-- A base-only test suite (exitcode-stdio). It uses the hand-rolled assertions
-- in test/Spec.hs and needs no test framework, so `cabal test` works offline
-- too. The README's Upgrade path shows how to swap this for Hspec + QuickCheck.
test-suite spec
  import:           warnings
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:    base, learning-haskell
  default-language: Haskell2010
