# Cargo.toml — the project manifest.
#
# This is deliberately a std-only project: there are NO entries under
# [dependencies], so `cargo build`, `cargo run`, and `cargo test` all work
# fully offline with nothing to download. The "## Upgrade path" section of the
# README shows where clap / serde / anyhow would slot in.
[package]
name = "kvstore"
version = "0.1.0"
edition = "2021"
description = "A tiny typed in-memory key/value store with a command parser — a hands-on tour of Rust's signature features."
license = "MIT"
# Keep MSRV explicit so the README's 'Last verified' claim is reproducible.
rust-version = "1.70"

# The library crate. Everything reusable lives here so that both the binary
# (src/main.rs) and the integration tests (tests/) can depend on it.
[lib]
name = "kvstore"
path = "src/lib.rs"

# The binary crate: a small REPL/one-shot CLI driving the library.
[[bin]]
name = "kvstore"
path = "src/main.rs"

[dependencies]
# Intentionally empty: std only, builds offline.

[dev-dependencies]
# Intentionally empty: tests use only std + the built-in test harness.

[profile.release]
opt-level = 3
